# paper-trail-api

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
api/: __init__.py  database.py  main.py
api/routers/: bills.py  donors.py  health.py  politicians.py
database/: schema.sql
docs/: LOCAL_DEVELOPMENT.md  QUICKSTART_DUCKDB.md  RAW_DATA_CATALOG.md
duckdb_loader/: README.md  pyproject.toml
duckdb_loader/duckdb_loader/: __init__.py  cli.py  filters.py  loader.py  paper_trail_loader.py  postgres_loader.py  schema.py
etl/: README.md  create_donation_summary_view.sql  create_indexes.sql  download_and_load.py  download_contributions.sh  download_voteview.sh  load_contributions_optimized.py  load_donors.py  load_politicians.py  pyproject.toml  transform_contributions.py  transform_donors.py  transform_politicians.py
etl/utils/: __init__.py  normalization.py
examples/: load_to_duckdb.py
scripts/: pyproject.toml
scripts/congress_legislators_converter/: README.md  __init__.py  __main__.py  cli.py  congress_utils.py  converter.py  downloader.py  exceptions.py  extractor.py  json_parser.py  schema.py  validators.py
scripts/contribution_filters/: README.md  __init__.py  __main__.py  cli.py  exceptions.py  extractor.py  pyproject.toml  schema.py  validators.py
scripts/contribution_filters/tests/: __init__.py  test_cli.py  test_exceptions.py  test_extractor.py  test_schema.py  test_validators.py
scripts/dime_converter/: README.md  __init__.py  __main__.py  cli.py  converter.py  exceptions.py  schema.py  validators.py
scripts/distinct_legislators/: README.md  __init__.py  __main__.py  cli.py  exceptions.py  extractor.py  schema.py  validators.py
scripts/duckdb_loader/: pyproject.toml
scripts/duckdb_loader/duckdb_loader/: __init__.py  cli.py  postgres_loader.py
scripts/legislator_crosswalk/: README.md  __init__.py  __main__.py  cli.py  exceptions.py  extractor.py  schema.py  validators.py
scripts/voteview_converter/: README.md  __init__.py  __main__.py  cli.py  converter.py  exceptions.py  schema.py  validators.py
tests/: __init__.py  conftest.py  test_filters.py  test_schema.py
tests/congress_legislators_converter/: __init__.py  test_cli.py  test_congress_utils.py  test_extractor.py  test_json_parser.py  test_validators.py
tests/legislator_crosswalk/: __init__.py  test_cli.py  test_exceptions.py  test_extractor.py  test_schema.py  test_validators.py
