[project]
name = "paper-trail-etl"
version = "0.1.0"
description = "ETL pipeline for Paper Trail campaign finance and voting data"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "psycopg>=3.3.2",
    "psycopg2-binary==2.9.11",
    "pyarrow>=22.0.0",
    "python-dotenv==1.2.1",
    "requests==2.32.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
