[project]
name = "dime-converter"
version = "1.0.0"
description = "Robust CSV to Parquet converter for DIME campaign finance data"
requires-python = ">=3.13"
dependencies = [
    "pyarrow>=15.0.0",
]

[project.scripts]
dime-converter = "dime_converter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dime_converter"]
