[project]
name = "contribution-filters"
version = "1.0.0"
description = "Filtered contribution datasets from DIME campaign finance data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
contribution-filters = "contribution_filters.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contribution_filters"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
