[project]
name = "duckdb-loader"
version = "1.0.0"
description = "Load DIME campaign finance data from Huggingface into DuckDB"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.14.0",
    "duckdb>=0.9.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
]

[project.scripts]
duckdb-loader = "duckdb_loader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["duckdb_loader"]
